Fixed Navbar Overlap Bug

--- a/src/app/Components/Navbar/Navbar.css
+++ b/src/app/Components/Navbar/Navbar.css
@@ -1,3 +1,13 @@
+:root {
+  --nav-height: 140px;
+}
+
+@media (max-width: 1250px) {
+  :root {
+    --nav-height: 80px;
+  }
+}
+
 .navbar {
   background-color: white;
   width: 100%;
@@ -6,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  height: 16vh;
+  height: var(--nav-height);
   transition: background-color 0.3s ease;
   position: fixed;
   top: 0;
@@ -19,7 +29,7 @@
   background-color: white;
   width: 100%;
   z-index: 4999;
-  height: 80px;
+  height: var(--nav-height);
 }
 
 .navbar.scrolled {
@@ -276,9 +286,9 @@
   height: 5vh;
 
 }
-.upper-navbar-menu-incubate-btn{
-  /* width: auto; */
-}
+/* .upper-navbar-menu-incubate-btn {
+  width: auto;
+} */
 .navbar-links-joinus-btn-text {
   color: white;
   text-align: center;
@@ -300,14 +310,14 @@
 
   .nav-links {
     position: fixed;
-    top: 80px;
+    top: var(--nav-height);
     right: 0;
     background-color: #a00534;
     flex-direction: column;
     width: 100%;
     margin: auto;
     justify-content: center;
-    height: calc(100vh - 80px);
+    height: calc(100vh - var(--nav-height));
     transform: translateX(100%);
     transition: transform 0.3s ease;
     z-index: 9999999999999;
@@ -369,12 +379,12 @@
 
   .nav-links {
     position: fixed;
-    top: 80px;
+    top: var(--nav-height);
     right: 0;
     background-image: url("../../../../public/assets/corosuel-bg.png");
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 80px);
+    height: calc(100vh - var(--nav-height));
     transform: translateX(100%);
     transition: transform 0.3s ease;
     z-index: 9999999999999;
